--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,11 +1,10 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CredX - Credit Repair Services</title>
-    <meta name="description" content="Professional credit repair services. Improve your credit score with our proven 5-day masterclass and dispute strategies.">
   </head>
   <body>
     <div id="root"></div>
